added challenges diagram

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ VITE_projectId=client-eco-track-
 VITE_storageBucket=client-eco-track.firebasestorage.app
 VITE_messagingSenderId=417947941942
 VITE_appId=1:417947941942:web:3573e47df8986385d0ac97
+
+VITE_API_URL=http://localhost:3000
