--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ VITE_storageBucket=client-eco-track.firebasestorage.app
 VITE_messagingSenderId=417947941942
 VITE_appId=1:417947941942:web:3573e47df8986385d0ac97
 
-VITE_API_URL=http://localhost:3000
+VITE_API_URL=https://server-eco-track.vercel.app
